# text-to-audio-automate

./: .gitignore  README.md  check_setup.py  pyproject.toml  requirements.txt
app/: __init__.py
app/cli/: __init__.py  retry.py  run.py  status.py
app/core/: config.py  database.py  fs_utils.py  logging_utils.py  models.py  pipeline.py  text_utils.py
app/services/: __init__.py  extract.py  input_sync.py  llm_client.py  notifier.py  publisher.py  tts.py
config/: app.yaml  llm.yaml  voices.yaml
scripts/: check_env.bat  retry_failed.bat  run_pipeline.bat  status_jobs.bat
tests/: conftest.py
tests/integration/: test_pipeline_text_only.py
tests/unit/: test_config.py  test_database.py  test_extract.py  test_input_sync.py  test_llm_client.py  test_text_utils.py  test_tts.py
